force-app/main/default/objects/Campaign/fields/Div__c.field-meta.xml
<CustomField>
    <fullName>Div__c</fullName>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Division 1</fullName>
            </value>
            <value>
                <fullName>Division 2</fullName>
            </value>
            <value>
                <fullName>Division 3</fullName>
            </value>
            <value>
                <fullName>Division 5</fullName>
            </value>
            <value>
                <fullName>Division 6</fullName>
            </value>
            <value>
                <fullName>Division 7</fullName>
            </value>
            <value>
                <fullName>Division 8</fullName>
            </value>
            <value>
                <fullName>Division 10</fullName>
            </value>
            <value>
                <fullName>National Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>