force-app/main/default/objects/Campaign/fields/Post_Event_Summary__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Summary__c</fullName>
    <description>Provide information on the overall success of the Campaign as well as blockers and issues and other items that may have come up to help drive the success of future Campaigns.</description>
    <label>Post Event Summary</label>
    <type>TextArea</type>
</CustomField>