force-app/main/default/objects/Campaign/fields/Sub_Product__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product__c</fullName>
    <label>Sub Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>